[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/PersonViewer.gd" type="Script" id=1]
[ext_resource path="res://assets/pixel_faces/00067.png" type="Texture" id=3]
[ext_resource path="res://mukta32.tres" type="DynamicFont" id=4]
[ext_resource path="res://mukta16.tres" type="DynamicFont" id=5]

[node name="PersonViewer" type="Node2D"]
position = Vector2( -11.2638, 5.19867 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -96 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Bio" type="Label" parent="."]
margin_left = -88.8957
margin_top = 43.0835
margin_right = 84.1043
margin_bottom = 91.0835
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I love wearing contacts ya feel? It makes me feel like i'm not blind"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameAge" type="Label" parent="."]
margin_left = -88.7011
margin_top = -9.27809
margin_right = 38.2989
margin_bottom = 45.7219
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leighton, 34"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Likes" type="Label" parent="."]
margin_left = -92.0
margin_top = 99.4546
margin_right = -53.0
margin_bottom = 113.455
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Likes:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hates" type="Label" parent="."]
margin_left = -92.0
margin_top = 141.948
margin_right = -29.0
margin_bottom = 182.948
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hates:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LikeContainer" type="Node2D" parent="."]

[node name="HateContainer" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -96.0
margin_top = -192.0
margin_right = 96.0
margin_bottom = 192.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
